k8s-manifests/deployment-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  trips
  namespace: default
  labels:
    app:  trips
spec:
  selector:
    matchLabels:
      app: trips
  replicas: 1
  template:
    metadata:
      labels:
        app:  trips
    spec:
      containers:
      - name:  trips
        image:  registryltb1998.azurecr.io/trips:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: default
spec:
  selector:
    app: trips
  ports:
  - name: trips
    protocol: TCP
    port: 80
---
