k8s-manifests/deployment-tripview.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl-tripviewer
  namespace: web
  labels:
    app: tripviewer
spec:
  selector:
    matchLabels:
      app: tripviewer
  replicas: 1
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: app-tripviewer
        image: registryltb1998.azurecr.io/tripviewer:latest 
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  selector:
    app: tripviewer
  ports:
    - port: 80
      targetPort: 80
