k8s-manifests/deployment-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  user-java
  namespace: api
  labels:
    app:  user-java
spec:
  selector:
    matchLabels:
      app: user-java
  replicas: 1
  template:
    metadata:
      labels:
        app:  user-java
    spec:
      containers:
      - name:  user-java
        image:  registryltb1998.azurecr.io/user-java:latest
        ports:
        - containerPort:  80
          name:  user-java
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api
spec:
  selector:
    app: user-java
  ports:
  - name: user-java
    protocol: TCP
    port: 80
---
